--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Calculator</title>
     <link rel="stylesheet" type='text/css' href='styles.css' />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700" rel="stylesheet" />
-    <script src='script.js'></script>
 </head>
 
 <body>
@@ -16,10 +15,10 @@
         <div id="calculator">
             <div id="result">
                 <div id="history">
-                    <p id="history-value">99</p>
+                    <p id="history-value"></p>
                 </div>
                 <div id="output">
-                    <p id="output-value">9999</p>
+                    <p id="output-value"></p>
                 </div>
             </div>
             <div id="keyboard">
@@ -47,5 +46,6 @@
         </div>
     </div>
 </body>
+<script src='script.js'></script>
 
 </html>
